# bricsctf-2023-stage1

./: .gitignore  README.md
tasks/crp/arc3/: README.md
tasks/crp/arc3/solve/: expl.py
tasks/crp/random/: README.md
tasks/crp/random/dev/: flag.txt
tasks/crp/random/solve/: gen_rels.cpp  hax.cpp  solve.sh
tasks/crp/sqrt/: README.md
tasks/crp/sqrt/solve/: 5.py
tasks/crp/sss/: .gitattributes  README.md
tasks/crp/sss/dev/: Cargo.toml  flag.txt
tasks/crp/sss/public/: output.txt.xz
tasks/for/elephant/: README.md
tasks/for/elephant/dev/: aes.sql  clean_image.py  sources
tasks/for/elephant/solve/: bgrep.py  decrypt.py  dump.txt  find_func.py  find_pass.py  funcs.txt  load_segs.py  prepare_vol3.sh
tasks/for/sralker/: README.md
tasks/for/sralker/solve/: solve.py
tasks/ppc/dictionary/: README.md  prepare-public.sh
tasks/ppc/dictionary/deploy/: docker-compose.yml
tasks/ppc/dictionary/solve/: solve.py
tasks/ppc/gif0day/: README.md  makepublic.sh
tasks/ppc/gif0day/deploy/: Dockerfile  (+1 more)
tasks/ppc/tun/: README.md
tasks/pwn/blackmail/: README.md
tasks/pwn/game/: README.md  makepublic.sh
tasks/pwn/paint/: README.md  makepublic.sh
tasks/rev/1/: README.md
tasks/rev/flagcmp/: README.md  prepare-public.sh
tasks/rev/flagcmp/dev/wasm/: Cargo.toml
tasks/rev/flagcmp/dev/wasm/src/: lib.rs
tasks/rev/perlovka/: README.md
tasks/rev/shellcode???/: README.md
tasks/web/chadgpt/: README.md  makepublic.sh
tasks/web/gigachadgpt/: README.md  makepublic.sh
tasks/web/my-secrets/: README.md
tasks/web/picoblog/: README.md  prepare-public.sh
(+184 files in other folders)
